awx-rabbit-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: awx-queue
  labels:
    app: awx
    role: queue
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: awx
        role: queue
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3
        ports:
        - containerPort: 5672
