awx-task-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: awx-task
  labels:
    app: awx
    role: task
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: awx
        role: task
    spec:
      containers:
      - name: awx-task
        image: geerlingguy/awx_task:latest
