awx-memcached-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awx-cache
spec:
  ports:
  - name: memcached
    port: 11211
    targetPort: 11211
  selector:
    app: awx
    role: cache
