awx-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awx-db
spec:
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  selector:
    app: awx
    role: database
