awx-rabbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awx-queue
spec:
  ports:
  - name: queue
    port: 5672
    targetPort: 5672
  selector:
    app: awx
    role: queue
